--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   ],
   "license": "ISC",
   "author": "suman kumar",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
