--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-  "dev": "nodemon -r dotenv/config src/index.js"
-},
+    "dev": "nodemon -r dotenv/config src/index.js"
+  },
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.1"
